--- a/newsletter-js/newsletter.html
+++ b/newsletter-js/newsletter.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter Form</title>
+    <script src="validate_email.js" defer></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const form = document.getElementById('emailForm');
+            const emailInput = document.getElementById('email');
+            const errorMessage = document.getElementById('error-message');
+
+            form.addEventListener('submit', function(event) {
+                const email = emailInput.value;
+                if (!validateEmail(email)) {
+                    event.preventDefault();
+                    errorMessage.textContent = 'Please enter a valid email address.';
+                } else {
+                    errorMessage.textContent = '';
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <form id="emailForm">
